Bug 130933 - wrap tools are jumping back and forward
Summary: wrap tools are jumping back and forward
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2020-02-25 17:13 UTC by Xavier Van Wijmeersch
Modified: 2020-02-27 12:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
wrap icons are jumping back and forward (1.22 MB, application/vnd.oasis.opendocument.text)
2020-02-25 17:18 UTC, Xavier Van Wijmeersch
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xavier Van Wijmeersch 2020-02-25 17:13:59 UTC
Open the attachment
Click on the image and try to select another wrap icon and look that its jump to the previous icon.
Image is anchor to character and when anchor as character the image is not showing but when exporting to pdf the image is showing


Version: 7.0.0.0.alpha0+
Build ID: d0487363753960faccb8ba464414e18786dcd915
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded
Comment 1 Xavier Van Wijmeersch 2020-02-25 17:18:00 UTC
Created attachment 158187 [details]
wrap icons are jumping back and forward
Comment 2 raal 2020-02-25 21:23:07 UTC
confirm with Version: 7.0.0.0.alpha0+
Build ID: f32a59a52e3ee2a0a8df9bb76bc1ff0ada7c7f1d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3;
Comment 3 Xisco Faulí 2020-02-26 17:04:33 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=42f281c56e0c06327fa382c0984ecf2e8c21e414

author	Caolán McNamara <caolanm@redhat.com>	2020-02-19 13:22:19 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2020-02-26 17:24:59 +0100
commit 42f281c56e0c06327fa382c0984ecf2e8c21e414 (patch)
tree e6b7a627d8d2ed88b43cf4d624efd47da6f3b36d
parent 96513a30a8c5782444ffb5691bbed13bd61114d9 (diff)
weld impress navigator

Bisected with: bibisect-linux64-6.5

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2020-02-26 19:59:05 UTC
commit 42f281c56e0c06327fa382c0984ecf2e8c21e414 is after the commit d0487363753960faccb8ba464414e18786dcd915 but its still probably my commit.

I see it if I use right click, wrap and then the sidebar flashes between modes. Seems ok for me if I click the sidebar element directly
Comment 5 Caolán McNamara 2020-02-26 20:04:59 UTC
commit a22de0aacc9fb4197e9051f572b1a9298b2472e2
Date:   Thu Jan 23 23:34:59 2020 +0100

    tdf#130096 Wrap Sidebar update use common .uno commands and layout

might be indicated here
Comment 6 Commit Notification 2020-02-27 08:51:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8e3f728e87b30fadd8b392b002f1cab5967fe10

tdf#130933 wraptools are berserk

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xavier Van Wijmeersch 2020-02-27 12:41:31 UTC
thx Caolán McNamara

its working now

Version: 7.0.0.0.alpha0+
Build ID: 5c3dae90e9bd0232ea790c1a79eaefaf2b74a144
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3; 
Locale: nl-BE (en_US.UTF-8); UI-Language: en-US
Calc: threaded