tdf#130933 wraptools are berserk

probably a regression from...

commit a22de0aacc9fb4197e9051f572b1a9298b2472e2
Date:   Thu Jan 23 23:34:59 2020 +0100

    tdf#130096 Wrap Sidebar update use common .uno commands and layout

because there were two toolbars with radiobuttons each toolbar has
to have one active radiobutton so they fight it out toggling on and
off when attempting to make one toolbar with all inactive radiobuttons

Change-Id: Iafe70dc1328ad80744cb4569365e25bf5eba6b53
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89596
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>